--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "nyholm/psr7": "1.4.*",      
         "nikic/fast-route": "^1.3",
         "arikaim/container": "^1.1",
+        "arikaim/http": "^1.0",
         "arikaim/validator": "^1.2"                
     },   
     "autoload": {       
